# Stomatopod-Inspired-Active-Multi-Channel-Gaze-Control-V3

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: test.yml
docs/: biological_disclaimer.md  lecture_mapping.md  project_spec.md  setup.md
examples/: 02_results_explorer.ipynb  02_results_explorer.py  README.md  walkthrough.ipynb  walkthrough.py
models/: stomatopod_eyes.xml  stomatopod_eyes_hard.xml  stomatopod_eyes_moving.xml
src/experiments/: _common.py  benchmark_dynamical.py  make_plots.py  noise_ablation.py  record_video.py  run_all.py  run_b1_fixed.py  run_b2_preprocessed.py  run_b3_active.py  run_b3_dynamical.py  run_b3_learned.py  train_learned.py  train_learned_rl.py  tune_b3.py
src/stomatopod_vision/: __init__.py  _mlp.py  gimbal_control.py  metrics.py  preprocessing.py  scheduler.py  sensor.py  viz.py  world.py
tests/: run_all.py  test_experiments_common.py  test_gimbal_control.py  test_hopf_scheduler.py  test_learned_rl.py  test_metrics.py  test_mlp.py  test_preprocessing.py  test_scheduler.py  test_sensor.py  test_stomatopod_eyes.py  test_viz.py  test_world.py
