[project]
name = "stomatopod-active-vision"
version = "0.1.0"
description = "Stomatopod-Inspired Active Multi-Channel Gaze Control — a three-layer biomimetic architecture in MuJoCo"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

# Runtime dependencies. Kept in lockstep with requirements.txt — both
# files exist because some users prefer one over the other. The bonus
# learned scheduler is pure NumPy, so there is no torch / jax dependency.
dependencies = [
    "mujoco>=3.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "mediapy>=1.2",
    "imageio-ffmpeg>=0.5",
]

[project.optional-dependencies]
# pytest is not required — tests run as plain scripts (`python tests/test_*.py`).
# Install with `pip install -e .[tests]` only if you want to use pytest's
# test discovery / fixtures / parameterise machinery against our tests.
tests = ["pytest>=7.0"]
# `pip install -e .[dev]` brings in the linter so `make lint` works.
dev   = ["ruff>=0.5", "mypy>=1.0"]

[project.urls]
Source = "https://github.com/NeuromorphicControl/stomatopod-active-vision"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
